--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="JS Garden はブラウザ上で動くコーディングテスト対策向けの JavaScript 練習ツールです。問題を選び、テストを実行しながら実装力を鍛えられます。"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sallyacolyte.github.io/js-garden/" />
+    <meta property="og:title" content="JS Garden | JavaScript Coding Practice" />
+    <meta
+      property="og:description"
+      content="ブラウザで問題を選び、テストを回しながら JavaScript スキルを磨ける練習サービス。個人・商用どちらでも無料で利用できます。"
+    />
+    <meta property="og:image" content="https://sallyacolyte.github.io/js-garden/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="JS Garden | JavaScript Coding Practice" />
+    <meta
+      name="twitter:description"
+      content="ブラウザで問題を選び、テストを回しながら JavaScript スキルを磨ける練習サービス。個人・商用どちらでも無料で利用できます。"
+    />
+    <meta name="twitter:image" content="https://sallyacolyte.github.io/js-garden/og-image.png" />
     <title>JS Garden - Coding Practice</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
